--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,24 @@
 
         </plugins>
     </build>
+    <build>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<configuration>
+				<mainClass>${start.class}</mainClass>
+				<layout>ZIP</layout>
+			</configuration>
+			<executions>
+				<execution>
+					<goals>
+						<goal>repackage</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
 
 </project>
